2011-9-1 Duan Pengfei <bestdpf@gmail.com>
	*add support for some other BSD OSs
	-rewrite the struct's construction function operator {}, because BSD's compliers don't support this method.
		I use direct construction instead, the affected files are core/WorldModel.h, core/WorldModel.cpp,
		perception/Vision.cpp

///////////////Below is changelogs years ago, but these years little changelog is added.////
	
2007-06-12 Xu Yuan  <xuyuan.cn@gmail.com>
    ** release version 0.2.2
    * agent:
    - use the data file, it can walk with different length steps now
    - add FootAdjuster, so the lofted foot keeps horizontal
    * toolkit:
    - synchrony the agent log and server log
    - display prints by glut bitmap fonts, so the glut library should be linked
    - load the *.obj model files of 3D object (from the rcssserver3D)
    - load images as OpenGL textures by ILUT (a sub lib of DevIL), so the DevIL should be linked
    - accumlate the camera speed while keep pressing
    * matlab/HR_M:
    - the *.m files realtive to kinematic simulation of humanoid robot are added

2007-05-28 Xu Yuan  <xuyuan.cn@gmail.com>
    * svn:
	- import to local Subversion

2007-05-27 Xu Yuan  <xuyuan.cn@gmail.com>
    * toolkit:
    - fix a bug when do not load ang logfile
    - disable some functions of RsgEdit, for they are not good enough, need more work here.
    * lib/math:
    - rewrite the Vector and Matrix, and do relative changes to agent and toolkit

2007-05-05 Xu Yuan  <xuyuan.cn@gmail.com>
	* toolkit:
	- support the 'offical' logfile formate, remove the old logfile formate supporting

2007-04-18 Xu Yuan  <xuyuan.cn@gmail.com>
	* integrate:
	- integrate the agent source and toolkit source
	
2007-02-28 Xu Yuan  <xuyuan.cn@gmail.com>
	* lib:
	- fix a rellocate bug in SocketStream

2007-02-27 Xu Yuan  <xuyuan.cn@gmail.com>
	* Spark agent:
	- implement the demo action: squat
	- implement the Proportion controller
	- import the Joystick controller
