@@ -23,21 +23,10 @@ Actions::~Actions()
 
 std::string Actions::command() const
 {
-/*
-	int i=0;
-	for(TActionPtrs::const_iterator iter1=mActs.begin(); iter1!=mActs.end(); ++iter1)
-	{
-		printf("i=%d\n%s\n",i,(*iter1)->command().c_str());
-		i++;
-	}
-	printf("\n==========================\n");
-*/
-	/////////////////////////////////////////////////////// TT test
 	std::string cmds;
 	for(TActionPtrs::const_iterator iter=mActs.begin(); iter!=mActs.end(); ++iter){
 		cmds += (*iter)->command();
 	}
-	//printf("%s\n",cmds.c_str());
 	return cmds;
 }
 
